Weather icon changes added

--- a/src/styles.css
+++ b/src/styles.css
@@ -103,7 +103,7 @@ h5 {
   font-size: 12px;
   font-weight: bold;
   text-align: center;
-  margin: 0px 0px 10px;
+  margin: 0px 0px 10px 0px;
 }
 
 h6.status {
@@ -190,4 +190,13 @@ form {
 
 div.buttons {
   display: inline;
+}
+
+input {
+  border-radius: 6px 6px 6px 6px;
+  width: 100%;
+  max-width: 300px;
+  padding: 5px 10px;
+  border: none;
+  background-color: #f2e7ea;
 }
